# beatrice

./: .gitignore  CMakeLists.txt  README.md  beatrice.pro
docs/: KEYBINDS.md
include/api/: file.h  macros.h  utils.h
include/ui/: cmdtext.h  commandline.h  filelist.h  filelistinfo.h  filelistinsidelist.h  filelistsearch.h  filelisttext.h  filelistwidget.h  findtext.h  findwidget.h  infopanel.h  linenumberarea.h  mainwindow.h  replacetext.h  syntaxhighlighter.h  textbox.h
src/: clipboard.cpp  clipboard.h  cmdlist.cpp  cmdlist.h  cmdtext.cpp  cmdwidget.cpp  cmdwidget.h  commandline.cpp  commandline.h  config.cpp  config.h  file.cpp  file.h  filelist.cpp  filelist.h  filelistinfo.cpp  filelistinfo.h  filelistinsidelist.cpp  filelistsearch.cpp  filelistsearch.h  filelisttext.cpp  filelisttext.h  filelistwidget.cpp  filelistwidget.h  fileslist.cpp  fileslist.h  findtext.cpp  findtext.h  findwidget.cpp  findwidget.h  infopanel.cpp  infopanel.h  linenumberarea.cpp  linenumberarea.h  macros.cpp  macros.h  macroslist.cpp  macroslist.h  main.cpp  mainwindow.cpp  (+9 more)
src/api/: config.cpp  file.cpp  macros.cpp  macroslist.cpp  utils.cpp
src/ui/: clipboard.cpp  cmdtext.cpp  cmdwidget.cpp  commandline.cpp  filelist.cpp  filelistinfo.cpp  filelistinsidelist.cpp  filelistsearch.cpp  filelisttext.cpp  filelistwidget.cpp  findtext.cpp  findwidget.cpp  infopanel.cpp  linenumberarea.cpp  mainwindow.cpp  replacetext.cpp  syntaxhighlighter.cpp  textbox.cpp
